Add all tables Test all tables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,32 @@
 {
     "cSpell.words": [
+        "Ametrine",
+        "Ammolite",
+        "Benitoite",
+        "Bowyers",
+        "Caravanner",
+        "Chrysocolla",
+        "Clinohumite",
+        "Cordwainers",
+        "Danburite",
+        "Euclase",
+        "Gaspeite",
+        "Grossular",
+        "HALFLING",
+        "Heliodor",
+        "Hessonite",
+        "Hostliers",
+        "Humatite",
+        "Kuznite",
+        "Outgoingness",
+        "Periclase",
+        "Psionic",
+        "Rosehips",
+        "Scrying",
+        "Spurriers",
+        "Sugilite",
+        "Tanzanite",
+        "falsey",
         "firestore"
     ]
 }
