--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@austinhaws/rpggenerator-citygen-tables",
+  "name": "@rpggenerator/rpggenerator-citygen-tables",
   "version": "2.3.0",
   "description": "Randomizing tables for city generation",
   "main": "index.js",
   "scripts": {
+    "pub": "npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
